2024-12-06: 2.0.0 (d28e386)
- Initial version

2025-XX-XX: 2.0.1 (TBD)
- Add FlashDataDone callback